tests/parser/bad/cmodule-field-with.scilla
scilla_version 0

contract Nothing
()

field with
